refactor: class used in "not found tooltip" change to "ezlinks_not_found" to be more accurate with `mkdocs-obsidian-links`

--- a/docs/embed_link.css
+++ b/docs/embed_link.css
@@ -19,7 +19,7 @@
     font-weight: normal;
 }
 
-.not_found {
+.ezezlinks_not_found {
     background-color: rgba(211, 211, 211, 0.521);
     display: inline;
     color: grey;
